# goit-pythonweb-hw-03

my-web_app/: pyproject.toml
my_web_app/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
my_web_app/src/http_server/: jinja2_env.py  main.py
my_web_app/src/http_server/storage/: data.json
my_web_app/src/http_server/templates/: base.html  error.html  index.html  message.html  read.html
my_web_app/src/my_web_app/: jinja2_ex01.py
