[project]
name = "my-web-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmytro Zhuk",email = "140021292+dm-zhuk@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.1"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_web_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
